<resources>
    <string name="app_name">MedicaNet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MedicaNet</string>
    <string name="nav_header_subtitle">medicanetsv@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pendientes_entrega">Pendientes de Entrega</string>
    <string name="menu_entrega_medicamentos">Entregar Medicamento</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="id_usuario">ID Usuario</string>

    <string name="menu_far_historial">Historial de Entregas</string>
    <string name="menu_far_leer">Leer Receta</string>
    <string name="menu_far_listado">Listado de Pacientes</string>
    <string name="menu_far_pendientes">Medicamentos Pendientes de Entrega</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="consulta_programada">Consultas Programadas</string>
    <string name="consultas_pendientes">Consultas Pendientes</string>
    <string name="medicamentos_entregados">Medicamentos Entregados</string>
    <string name="pendientes_entrega">Pendientes de Entrega</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="salir">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datos_medicos">Datos Medicos pacientes</string>
    <string name="historial_medico">Historial Medico</string>
    <string name="medicamentos_pendientes">Medicamentos Pendientes</string>
    <string name="agregar_proxima_cita">Agregar proxima consulta</string>
    <string name="agregar_detalle_de_consulta">Agregar Detalle De Consulta</string>
    <string name="agregar_medicamentos">Agregar Medicamentos</string>
    <string name="consultar_paciente">Consultar Paciente</string>
    <string name="iniciar_consulta">Iniciar Consulta</string>
    <string name="programar_consulta">Programar Consulta</string>
    <string name="ejemplo_fecha_y_hora">Ejemplo Fecha y Hora</string>
    <string name="docConsultarPaciente_encabezado">Consultar Programadas</string>
    <string name="docConsultarPaciente_edtBuscar">Código de paciente</string>
    <string name="docConsultarPaciente_btnBuscar">Buscar</string>
    <string name="docConsultarDatosPaciente_encabezado">Datos Del Pasiente</string>
    <string name="text_prueba_1">Prueba WS 1</string>
    <string name="text_prueba_2">Prueba WS 2</string>


    <!-- desde aqui mi codigo -->

    <!-- menu doctor -->
    <string name="menu_doc_consultas">Consultas</string>
    <string name="menu_doc_pacientes">Pacientes</string>
    <string name="menu_doc_progrmar_consultas">Programar Consultas</string>

    <!-- menu pacientes -->
    <string name="menu_pac_citas_medicas">Citas Medicas</string>
    <string name="menu_pac_datos_medicos">Datos Medicos</string>
    <string name="menu_pac_historial_medico">Historial Medico</string>
    <string name="menu_pac_medicamentos">Medicamentos</string>

    <!-- menu farmacia -->
    <string name="menu_far_entregar_medicamentos">Entregar Medicamentos</string>
    <string name="menu_far_historial_entregas">Historial de Entregas</string>


    <string-array name="img_item_list_ejemplo">
        <item>@drawable/medicanet1</item>
        <item>@drawable/medicanet1</item>
        <item>@drawable/medicanet1</item>
        <item>@drawable/medicanet1</item>
        <item>@drawable/medicanet1</item>
        <item>@drawable/medicanet1</item>
        <item>@drawable/medicanet1</item>
        <item>@drawable/medicanet1</item>
        <item>@drawable/medicanet1</item>
        <item>@drawable/medicanet1</item>
    </string-array>

    <string-array name="campo1_item_list_ejemplo">
        <item>Código consulta1</item>
        <item>Código consulta2</item>
        <item>Código consulta3</item>
        <item>Código consulta4</item>
        <item>Código consulta5</item>
        <item>Código consulta6</item>
        <item>Código consulta7</item>
        <item>Código consulta8</item>
        <item>Código consulta9</item>
        <item>Código consulta0</item>
    </string-array>

    <string-array name="campo2_item_list_ejemplo">
        <item>Nombre pasiente1</item>
        <item>Nombre pasiente2</item>
        <item>Nombre pasiente3</item>
        <item>Nombre pasiente4</item>
        <item>Nombre pasiente5</item>
        <item>Nombre pasiente6</item>
        <item>Nombre pasiente7</item>
        <item>Nombre pasiente8</item>
        <item>Nombre pasiente9</item>
        <item>Nombre pasiente0</item>
    </string-array>

    <string-array name="campo3_item_list_ejemplo">
        <item>Campo 3</item>
        <item>Campo 3</item>
        <item>Campo 3</item>
        <item>Campo 3</item>
        <item>Campo 3</item>
    </string-array>

    <string-array name="campo4_item_list_ejemplo">
        <item>Campo 4</item>
        <item>Campo 4</item>
        <item>Campo 4</item>
        <item>Campo 4</item>
        <item>Campo 4</item>
    </string-array>

    <string-array name="img_lista_paciente_ejemplo">
        <item>@drawable/paciente</item>
        <item>@drawable/paciente</item>
        <item>@drawable/paciente</item>
        <item>@drawable/paciente</item>
        <item>@drawable/paciente</item>
        <item>@drawable/paciente</item>
        <item>@drawable/paciente</item>
        <item>@drawable/paciente</item>
        <item>@drawable/paciente</item>
        <item>@drawable/paciente</item>
    </string-array>

    <string-array name="campo1_lista_paciente_ejemplo">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="campo2_lista_paciente_ejemplo">
        <item>Nombre pasiente1</item>
        <item>Nombre pasiente2</item>
        <item>Nombre pasiente3</item>
        <item>Nombre pasiente4</item>
        <item>Nombre pasiente5</item>
        <item>Nombre pasiente6</item>
        <item>Nombre pasiente7</item>
        <item>Nombre pasiente8</item>
        <item>Nombre pasiente9</item>
        <item>Nombre pasiente10</item>
    </string-array>

    <string name="title_activity_mapa">Mapa</string>
    <string name="title_activity_places">Places</string>

    <!-- string WS -->
    <string name="token">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.IkhlbGxvIFdvcmxkISI.VzXeVJOGwyr_R_lWTM2VW1i7B24XlnxiPURkg4YxrWg</string>
    <string name="consultas_programadas">Consultas Programadas</string>
    <string name="cat_pref_name">Preferencias Medicanet</string>
    <string name="pref_lista_sex">Género</string>
    <string name="cat_pref_name_2">Preferencias de Mapas</string>
    <string name="pref_maps_name">Tipo Mapa</string>
    <string name="pref_map_sum">Permite cambiar el tipo de mapa para la localizacion.</string>
    <string name="pref_geo_name">Permitir Geolocalización</string>
    <string name="pref_geomaps_name">Permitir geolocalización y mapas</string>
    <string name="pref_darkmode_name">Modo Oscuro En Menu</string>
    <string name="pref_sum_geomap">Decide si das permisos a la app para mostrarte la geolocalizacion y mapas</string>
</resources>
