<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_admin"
        android:visible="false">
        <item
            android:id="@+id/nav_admin_ejemplo"
            android:icon="@android:drawable/ic_menu_add"
            android:title="Ejemplo de modal" />

        <item
            android:id="@+id/nav_admin_doctor"
            android:icon="@android:drawable/ic_menu_add"
            android:title="Doctor" />
    </group>

    <group
        android:id="@+id/group_doctor"
        android:visible="false">
        <item
            android:id="@+id/nav_doc_consultas_programadas"
            android:icon="@drawable/medicanet1"
            android:title="Consultas programadas" />
        <item
            android:id="@+id/nav_doc_pacientes"
            android:icon="@drawable/paciente"
            android:title="@string/menu_doc_pacientes" />
    </group>

    <group
        android:id="@+id/group_paciente"
        android:visible="false">
        <item
            android:id="@+id/nav_pac_citas"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_pac_citas_medicas" />
        <item
            android:id="@+id/nav_pac_datos_medicos"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_pac_datos_medicos" />
        <item
            android:id="@+id/nav_pac_historial_medico"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_pac_historial_medico" />
        <item
            android:id="@+id/nav_pac_medicamentos"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_pac_medicamentos" />
        <item
            android:id="@+id/nav_pac_perfil"
            android:icon="@android:drawable/ic_menu_add"
            android:title="Perfil" />
    </group>

    <group
        android:id="@+id/group_farmacia"
        android:visible="false">
        <item
            android:id="@+id/nav_far_entregar_medicamentos"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_far_entregar_medicamentos" />
        <item
            android:id="@+id/nav_far_historial_entregas"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_far_historial_entregas" />
    </group>

</menu>
