<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.doctor.consultas.ConsultaPendientes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ConsultarPaciente_edtBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/docConsultarPaciente_edtBuscar"
                android:inputType="textPersonName" />

            <Button
                android:layout_width="4dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/boton_redondeado_borde"
                android:clickable="true"
                android:text="@string/docConsultarPaciente_btnBuscar"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <TextView
            android:id="@+id/ConsultarPaciente_tevEncabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#9ECCCCCC"
            android:text="@string/docConsultarPaciente_encabezado"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lv_pendientes_entregas_pac"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</FrameLayout>