<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_admin_ejemplo">

    //PACIENTE
    <fragment
        android:id="@+id/nav_pac_citas"
        android:name="com.example.medicanet.ui.paciente.citas.Citas"
        android:label="@string/datos_medicos"
        tools:layout="@layout/fragment_pac_citas" />
    <fragment
        android:id="@+id/nav_pac_datos_medicos"
        android:name="com.example.medicanet.ui.paciente.datosMedicos.DatosMedicos"
        android:label="Consultas Pendientes"
        tools:layout="@layout/fragment_pac_datos_medicos" />
    <fragment
        android:id="@+id/nav_pac_historial_medico"
        android:name="com.example.medicanet.ui.paciente.historialMedico.HistorialMedico"
        android:label="@string/historial_medico"
        tools:layout="@layout/fragment_pac_historial_medico" />
    <fragment
        android:id="@+id/nav_pac_medicamentos"
        android:name="com.example.medicanet.ui.paciente.medicamentos.Medicamentos"
        android:label="@string/medicamentos_pendientes"
        tools:layout="@layout/fragment_pac_medicamentos" />

    //DOCTOR
    <fragment
        android:id="@+id/nav_doc_consultas_programadas"
        android:name="com.example.medicanet.ui.doctor.fragments.fragmentConsultasProgramadas"
        android:label="Consultas programadas"
        tools:layout="@layout/fragment_doc_consultas_pacientes" />
    <fragment
        android:id="@+id/nav_doc_pacientes"
        android:name="com.example.medicanet.ui.doctor.fragments.fragmentPacientes"
        android:label="Pacientes"
        tools:layout="@layout/fragment_doc_pacientes" />
    <fragment
        android:id="@+id/nav_doc_programar_consultas"
        android:name="com.example.medicanet.ui.doctor.fragments.fragmentProgramarConsulta"
        android:label="Programar Consultas"
        tools:layout="@layout/fragment_doc_programar_consultas" />

    //FARMACIA
    <fragment
        android:id="@+id/nav_far_listado_paciente"
        android:name="com.example.medicanet.ui.farmacia.PendientesDeEntrega.PendientesDeEntrega"
        android:label="Entregar medicamentos"
        tools:layout="@layout/fragment_far_entrega_medicamentos" />
    <fragment
        android:id="@+id/nav_far_historial_entregas"
        android:name="com.example.medicanet.ui.farmacia.MedicamentosEntregados.MedicamentosEntregados"
        android:label="Historial de Entregas"
        tools:layout="@layout/fragment_far_medicamentos_entregados" />


    //OTROS
    <fragment
        android:id="@+id/nav_entrega_medica"
        android:name="com.example.medicanet.ui.entregaMedicamentos.entregaM"
        android:label="@string/menu_entrega_medicamentos"
        tools:layout="@layout/fragment_pac_medicamentos" />
    <fragment
        android:id="@+id/nav_web_services"
        android:name="com.example.medicanet.webServices.WebService"
        android:label="Web Services"
        tools:layout="@layout/fragment_web" />
    <fragment
        android:id="@+id/nav_admin_ejemplo"
        android:name="com.example.medicanet.fragment_admin_ejemplo"
        android:label="Ejemplo de modal"
        tools:layout="@layout/fragment_fragment_admin_ejemplo" />
</navigation>